# wradlib-data

./: LICENSE  MANIFEST.in  README.md  make_registry.py  pyproject.toml
.github/workflows/: ci.yaml  pypi-release.yml
ci/: environment.yml
data/geo/: bonn_gtopo.tif
data/hdf5/: 40_20181220_060630.pvol.h5
data/misc/: hmcp_centroids_df.nc  hmcp_centroids_dp.nc  hmcp_weights.nc  msf_cband_v2.nc  radiosonde_10410_20140610_1200.h5
geo/: rivers_asia_37331.shx
gpm/: 2A-CS-151E24S154E30S.GPM.Ku.V7-20170308.20141206-S095002-E095137.004383.V05A.HDF5  2A-RW-BRS.GPM.Ku.V6-20160118.20141206-S095002-E095137.004383.V04A.HDF5
hdf5/: 2014-08-10--18_20_00,00.mvol  40_20181220_061230.pvol.h5  IDR66_20100206_111233.vol.h5  IDR66_20141206_094829.vol.h5  TAG_cmap_sweeps_0204050607.hdf5  behel.pvol.hdf  bejab.pvol.hdf  belgium.comp.hdf  bewid.pvol.hdf
hdf5/behel/: 20200207130000.rad.behel.pvol.wrad.scanz.hdf  20200207130500.rad.behel.pvol.rhohv.scanz.hdf  20200207130500.rad.behel.pvol.vrad.scanz.hdf  20200207130500.rad.behel.pvol.wrad.scanz.hdf  20200207131000.rad.behel.pvol.vrad.scanz.hdf  20200207131500.rad.behel.pvol.dbzh.scanz.hdf  20200207131500.rad.behel.pvol.rhohv.scanz.hdf  20200207131500.rad.behel.pvol.vrad.scanz.hdf  20200207131500.rad.behel.pvol.wrad.scanz.hdf  20200207132000.rad.behel.pvol.dbzh.scanz.hdf  20200207132000.rad.behel.pvol.wrad.scanz.hdf  20200207132500.rad.behel.pvol.dbzh.scanz.hdf  20200207132500.rad.behel.pvol.vrad.scanz.hdf  (+6 more)
misc/: msf_cband_v1.nc  msf_xband_v1.nc  radiosonde_10410_20140610_1200.json
netcdf/: TAG-20120801-140046-02-D.nc  TAG-20120801-140046-02-P.nc  TAG-20120801-140046-02-R.nc  TAG-20120801-140046-02-V.nc  TAG-20120801-140046-02-VV.nc  TAG-20120801-140046-02-VW.nc  TAG-20120801-140046-02-W.nc  TAG-20120801-140046-02-Z.nc  TAG-20120801-140046-02-ZV.nc
sigmet/: SUR210819000847.RAWKPL0
trmm/: 2A-CS-151E24S154E30S.TRMM.PR.2A23.20100206-S111425-E111526.069662.7.HDF  2A-RW-BRS.TRMM.PR.2A23.20100206-S111422-E111519.069662.7.HDF  2A-RW-BRS.TRMM.PR.2A25.20100206-S111422-E111519.069662.7.HDF
wradlib_data/: __init__.py  dataset.py  registry.txt
(+17 files in other folders)
