[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "wradlib-data"
description="""Provides utility functions for accessing data repository for wradlib examples/notebooks"""
requires-python = ">=3.9"
license = {file = "LICENSE"}
maintainers = [
    { name = "wradlib developers", email = "wradlib@wradlib.org" }
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
]
dynamic = ["version", "dependencies", "readme"]

[project.urls]
homepage = "https://wradlib.org"
documentation = "https://docs.wradlib.org/"
repository = "https://github.com/wradlib/wradlib-data"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools]
packages = ["wradlib_data", "wradlib_data.tests"]

[tool.setuptools_scm]
write_to = "wradlib_data/version.py"
version_scheme = "release-branch-semver"
fallback_version = "999"

[tool.black]
target-version = ["py39"]
line-length = 100

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]

# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["wradlib-data"]

[tool.check-manifest]
ignore = ["docs/*", "tests/*", "ci/*"]
